[package]
name = "voxtimer"
version = "0.1.0"
authors = ["Ethan Edwards <ethancarteredwards@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]
[dependencies.gio]
version = ""
features = ["v2_44"]